# ppt-generator

./: README.md  chapter04.pptx  chapter04_test.pptx  chapter04_test2.pptx  chapter04_test3.pptx  main.py  pyproject.toml
ppt_generator/: __init__.py  builder.py  cli.py  generator.py  llm_service.py  text_analysis.py  theme.py
ppt_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
